메인 화면 개발 (#10)
* #7 메인 화면 개발
- header, footer.pug 개발
- index.pug 레이아웃 개발

* #7 메인 화면 개발
- header, footer.pug 코드 layout.pug에 합침

* #7 메인 화면 개발
- index 화면 Top 영역 레이아웃 구성
- 관련 image 파일 첨부

* #7 메인 화면 개발
- top 영역 레이아웃 및 애니메이션 구현
- notice 레이아웃 구성
- reward 레이아웃 진행 중

* #7 메인 화면 개발
- bean, brazil, fav, reserve, store 레이아웃 및 애니메이션 적용

Co-authored-by: KimSatGat <kimsatgat22@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    git test
-    PR test
-    Issue test
-    테스트~
+    <header></header>
 </body>
 </html>
